--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -5,8 +5,8 @@
   font-size: @font-size-sm;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: @white;
+  // color-scheme: light dark;
+  // color: @white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,6 +19,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+ul, li{
+  list-style: none;
 }
 
 body, main {
