--- a/frontend/src/pages/blog/Home/index.less
+++ b/frontend/src/pages/blog/Home/index.less
@@ -18,6 +18,13 @@
     display: flex;
     flex-direction: column;
     background-color: #fff;
+
+    .content-wrapper{
+      margin: 0 10%;
+      padding: 50px 0;
+      max-width: 850px;
+    }
+    
   }
 }
 
