--- a/frontend/src/pages/blog/Home/index.less
+++ b/frontend/src/pages/blog/Home/index.less
@@ -1,17 +1,18 @@
-.home{
+.home {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
 
-  .userInfo{
+  .userInfo {
     max-width: 700px;
     flex-basis: 300px;
     flex-shrink: 1;
     flex-grow: 1;
+    background-image: radial-gradient(farthest-corner circle at 0% 0%, #00ffc2 0%, 28%, #00fbba 0% 0%, 46%, #00e0ff 0% 0%, 60%, #00b7ff 0% 0%, 82%, #004fff 0% 0%);
   }
 
-  .artCotent{
+  .artCotent {
     flex-basis: 300px;
     flex-shrink: 3;
     flex-grow: 3;
@@ -19,20 +20,20 @@
     flex-direction: column;
     background-color: #fff;
 
-    .content-wrapper{
+    .content-wrapper {
       margin: 0 10%;
       padding: 50px 0;
       max-width: 850px;
     }
-    
+
   }
 }
 
-@media screen and (max-width: 960px){
-  .home{
+@media screen and (max-width: 960px) {
+  .home {
     flex-direction: column;
 
-    .userInfo{
+    .userInfo {
       width: 100%;
       min-width: 100%;
       height: 300px;
