--- a/frontend/src/pages/blog/Home/index.less
+++ b/frontend/src/pages/blog/Home/index.less
@@ -19,11 +19,12 @@
     display: flex;
     flex-direction: column;
     background-color: #fff;
-
+   
     .content-wrapper {
       margin: 0 10%;
       padding: 50px 0;
       max-width: 850px;
+      height:100%;
     }
 
   }
