--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -2,7 +2,7 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-size: @font-size-sm;
+  font-size: @font-size-base;
   font-weight: 400;
 
   font-synthesis: none;
@@ -28,6 +28,22 @@ body, main {
   height: 100vh;
   width: 100vm;
   background-color: @normal-color;
+}
+
+a{
+  text-decoration: none;
+}
+
+h1{
+  font-size: @heading-1-size;
+}
+
+h2{
+  font-size: @heading-2-size;
+}
+
+h3{
+  font-size: @heading-3-size;
 }
 
 .jzy-horizontal{
