--- a/frontend/src/components/ArtCard/index.less
+++ b/frontend/src/components/ArtCard/index.less
@@ -1,5 +1,45 @@
+@import '../style//default.less';
+
 .article-card{
   display:flex;
   flex-direction:column;
-  cursor: pointer;
+ 
+  margin-bottom: 2em;
+  font-weight: 100;
+
+  > h3 {
+    font-weight: 100;
+    margin-bottom: @margin-xss;
+    margin-top: @margin-xss;
+    color: @black;
+    cursor: pointer;
+    
+  }
+
+  > h3:hover{
+    color: @primary-color-hover;
+    font-weight: 3200;
+  }
+
+  > p{
+    font-size: @font-size-lg;
+    line-height: 1.7;
+    color: @text-color-secondary;
+  }
+
+  &-meta{
+    display: flex;
+    flex-direction: column;
+    margin-top: @margin-sm;
+    margin-bottom: @margin-sm;
+    color: @text-color-third;
+    size: @font-size-sm;
+  }
+
+  > hr{
+    width: 30%;
+    border-top:1px solid @text-color-third;
+    margin-bottom: @margin-sm;
+    margin-top: @margin-sm;
+  }
 }
