--- a/frontend/src/pages/blog/Home/index.less
+++ b/frontend/src/pages/blog/Home/index.less
@@ -10,6 +10,19 @@
     flex-shrink: 1;
     flex-grow: 1;
     background-image: radial-gradient(farthest-corner circle at 0% 0%, #00ffc2 0%, 28%, #00fbba 0% 0%, 46%, #00e0ff 0% 0%, 60%, #00b7ff 0% 0%, 82%, #004fff 0% 0%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .logo{
+      border-radius: 50%;
+      display: inline-block;
+      border: 1px solid gray;
+      overflow: hidden;
+      width: 100px;
+      height: 100px;
+    }
   }
 
   .artCotent {
