--- a/frontend/src/pages/Manage/index.less
+++ b/frontend/src/pages/Manage/index.less
@@ -57,14 +57,15 @@
 
 					&:hover {
 						font-weight: 600;
+						color: #a1a0a0;
 					}
 				}
 
 				.menu-divider{
 					margin-top: 40px;
 					font-size: 16px;
-					font-weight: 600;
 					margin-left: 16px;
+					font-weight: 600;
 				}
 			}
 
@@ -88,8 +89,9 @@
 		}
 	}
 
-	.dashboard {
+	.manage-content {
 		flex: 1;
+		padding: 16px;
 	}
 }
 
