feat:后台页面开发

--- a/frontend/src/pages/Manage/Dashboard/index.less
+++ b/frontend/src/pages/Manage/Dashboard/index.less
@@ -7,6 +7,18 @@
 
   &-header{
     height: 128px;
+    padding: 12px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column  ;
+    
+    h3{
+      color: #fff;
+    }
+
+    span{
+      font-size: 14px;
+    }
   }
 
   .bg-card{
@@ -32,7 +44,7 @@
   width: 100%;
 }
 
-.height-small{
+.height-sm{
   height: 128px;
 }
 
