--- a/frontend/src/pages/Manage/Blogs/BlogEdit/BlogEdit.less
+++ b/frontend/src/pages/Manage/Blogs/BlogEdit/BlogEdit.less
@@ -1,4 +1,4 @@
-@import "../../../components/style/default.less";
+@import "../../../../components/style/default.less";
 
 
 @quill-toolbar-border: rgba(0,0,0,0.05);
